# doc_compare_llm

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: README.md
notebooks/: clean_text_splitter.ipynb  llm_diff.ipynb  test.ipynb  token_estimation.ipynb
src/llmdiff/: app_interface.py  diff_explainer.py  differ.py  text_splitter.py
src/llmdiff/streamlit/: doc_compare_demo.py
