[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "llmdiff"
authors = [
    {name = "Aitor Mira Abad", email = "itortouch@gmail.com"},
]
description = "Compare documents using LLMs."
requires-python = ">=3.9"
dynamic = ["version", "readme", "dependencies"]

[tool.setuptools.dynamic]
version = {attr = "llmdiff.__version__"}
readme = {file=["README.md"], content-type="text/markdown"}
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
dev = [
    "streamlit >= 1.27.0"
]

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120